// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar should render Default 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithChildren 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithClassName 1`] = `
<DocumentFragment>
  <nav
    class="extra-classname css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithEmotion 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithError 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithLoading 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithLoggedIn 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/profile/subscription"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Subscriptions"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/profile"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Profil"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithoutItems 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-g9hqhg-MuiTypography-root-MuiLink-root-Navbar"
          href="/"
        >
          <div
            class="css-31ym2f-NavbarLogoWrapper ei6evl210"
          >
            <img
              alt="banff2"
              class="css-gp4aqo-ImageWrapper-Navbar e1shv2yg0"
              loading="eager"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 800w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 500w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 300w,
https://wepublish.ch/wp-content/uploads/2020/11/cropped-wepublishlogo-1.png 200w"
              title=""
            />
          </div>
        </a>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar should render WithoutLogo 1`] = `
<DocumentFragment>
  <nav
    class="css-1afpbz6-NavbarWrapper ei6evl216"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-o9rtii-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular ei6evl215 css-xf9z4a-MuiToolbar-root-NavbarInnerWrapper"
      >
        <div
          class="css-1trl8g0-NavbarMain ei6evl213"
        >
          <div
            class="css-6rgw7r-NavbarIconButtonWrapper ei6evl211"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1e6y8q3-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="css-lp67xt-NavbarLinks ei6evl214"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/foo/"
          >
            Foo
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1n8yv24-MuiTypography-root-MuiLink-root"
            href="/bar"
          >
            Bar
          </a>
        </div>
        <div
          class="css-cl7riy-NavbarSpacer ei6evl29"
        />
        <div
          class="css-100bt78-NavbarActions ei6evl212"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-v0nm25-MuiButtonBase-root-MuiIconButton-root-Navbar"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;
